<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="android.view.View" />
        <variable name="permissionsGranted" type="Boolean"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textViewWelcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/first_time_setup_welcome"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewNeedPermissions"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:text="@string/first_time_setup_need_permissions"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewWelcome" />

        <Button
            android:id="@+id/buttonRequestPermissions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:backgroundTint="#4CAF50"
            android:text="@string/first_time_setup_grant_button_text"
            android:enabled="@{permissionsGranted ? false : true}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewNeedPermissions" />

        <TextView
            android:id="@+id/textViewNeedPhoneName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:text="@string/first_time_setup_need_phone_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonRequestPermissions" />

        <EditText
            android:id="@+id/editTextPhoneName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:inputType="text"
            android:autofillHints="@string/first_time_setup_phone_name_label"
            app:layout_constraintStart_toEndOf="@+id/textViewPhoneName"
            app:layout_constraintTop_toBottomOf="@+id/textViewNeedPhoneName"
            tools:ignore="TextFields" />

        <TextView
            android:id="@+id/textViewPhoneName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="22dp"
            android:text="@string/first_time_setup_phone_name_label"
            android:labelFor="@id/editTextPhoneName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewNeedPhoneName" />

        <TextView
            android:id="@+id/textViewNeedGrantPermissions"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/first_time_setup_still_need_permissions"
            android:textColor="#FF9800"
            android:visibility="@{permissionsGranted ? View.INVISIBLE : View.VISIBLE}"
            app:layout_constraintBottom_toTopOf="@+id/buttonContinue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/buttonContinue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="16dp"
            android:enabled="@{permissionsGranted ? true : false}"
            android:text="@string/first_time_setup_continue_button_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/buttonWhyPermissions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/first_time_setup_why_button_text"
            app:layout_constraintStart_toEndOf="@+id/buttonRequestPermissions"
            app:layout_constraintTop_toTopOf="@+id/buttonRequestPermissions" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>